# SmartEnumCpp

./: CMakeLists.txt  README.md  defconfig  library.json  platformio.ini  platformio.ini (update to enable testing)  sdkconfig.esp32-qemu
.github/workflows/: platform-io-package.yml  platform-io-publish.yml
docs/: PolymorphicSmartEnum.md  SmartEnum.md  SmartEnumSwitch.md  SmartFlagEnum.md
examples/: smart_enum_switch.cpp
examples/basic/: basic_smart_enum.cpp
examples/flags/: smart_flag_enum.cpp
examples/polymorphic/: polymorphic_smart_enum.cpp
examples/switch/: smart_enum_switch.cpp
include/: SmartEnum.hpp  SmartEnumSwitch.hpp  SmartFlagEnum.hpp  library.json
include/SmartEnumCpp/: SmartEnum.hpp  SmartEnumSwitch.hpp  SmartFlagEnum.hpp
src/: CMakeLists.txt  SmartEnum.hpp  SmartFlagEnum.hpp
test/: README  test_SmartEnum.cpp  test_SmartEnum.cpp (existing, may need modification)  test_main.cpp
